--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@descope/react-sdk": "2.0.6",
+    "@descope/react-sdk": "^2.23.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
